# cpp-feather-ini-parser

./: CMakeLists.txt  INI.h
example/: example.cpp  file.ini
